--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index",
+    "develop": "nodemon index"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,8 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
     "randomatic": "^3.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
